transcode: Integer overflow in aspect ratio calculation
Using VLC 1.1.4 on Ubuntu 10.10. When I try to stream my Desktop (and transcoding it with h264), the image I stream is always stretched laterally. This also happens when I stream from a webcam (v4l2): the image is stretched vertically. Note that if I select to stream without transcoding, the image, in either case, looks normal. Please keep in mind that this bug seems to be only reproducible with Ubuntu. In Windows everything works as expected.
This is the generated output string used when transcoding is on:
:sout=#transcode{vcodec=h264,vb=1500,scale=1,width=640,height=480,acodec=mp4a,ab=128,channels=2,samplerate=44100}:http{dst=192.168.1.5:8080/stream.flv} :no-sout-rtp-sap :no-sout-standard-sap :sout-keep